# MailTm

./: LICENSE  README.md  pyproject.toml
src/mailtm/: __init__.py  consts.py  email.py  message.py
