[project]
name = "mail-tm"
version="0.0.90"
description="Temporary Email"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name="MainSilent"},
  {name="iamlostshe", email="vanamelcikov7275@gmail.com"}
]
dependencies = [
    "requests>=2.32.4",
]
keywords=['mail', 'email', 'temporary mail', 'temporary email', 'mailtm']
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iamlostshe/mail-tm"
Repository = "https://github.com/iamlostshe/mail-tm.git"
"Bug Tracker" = "https://github.com/iamlostshe/mail-tm/issues"
